add comments, stylecop rules

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,17 @@
-<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project>
   <ItemGroup>
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All"/>
+  </ItemGroup>
+
+  <PropertyGroup>
+	<CodeAnalysisRuleSetLocation>$(MSBuildThisFileDirectory)</CodeAnalysisRuleSetLocation>
+  </PropertyGroup>
+
+  <PropertyGroup>
+	<CodeAnalysisRuleSet>$(CodeAnalysisRuleSetLocation)\stylecop.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+
+  <ItemGroup>
+	<AdditionalFiles Include="$(CodeAnalysisRuleSetLocation)\stylecop.json" />
   </ItemGroup>
 </Project>
